request DELETE ok; big request POST ok; directory listing ok;

--- a/conf/default.conf
+++ b/conf/default.conf
@@ -3,15 +3,18 @@ server
 	listen 8080;
 	server_name lala.42.fr;
 
-	root ./blbl;
-	index index.html;
+	root ./www;
 
 	location / {
 		allow_methods GET;
 		index index.html;
 	}
 
-	
+	location /dataViz {
+		root .;
+		autoindex on;
+		index index.html;
+	}
 
 	location /dataViz/Treemap {
 		root .;
@@ -19,8 +22,15 @@ server
 	}
 
 	location *.php {
-		root ./www;
-		cgi_pass php;
+		cgi_pass /usr/bin/php-cgi;
+	}
+
+	location *.py {
+		cgi_pass /usr/bin/python3;
+	}
+
+	location /uploads {
+		autoindex on;
 	}
 
 }
