--- a/conf/default.conf
+++ b/conf/default.conf
@@ -3,22 +3,26 @@ server
 	listen 8080;
 	server_name lala.42.fr;
 
-	root ./www;
+	root /home/barb/cursus/newWebserv/www;
+	client_body_buffer_size 1M;
+	default_error_page /error.html;
 
 	location / {
-		allow_methods GET;
 		index index.html;
 	}
 
 	location /dataViz {
-		root .;
+		allow_methods GET;
+		root /home/barb/cursus/newWebserv;
 		autoindex on;
 		index index.html;
-	}
-
-	location /dataViz/Treemap {
-		root .;
-		index index.html;
+		location /dataViz/Treemap {
+			index test.html;
+			default_error_page /www/images/42_Logo.png;
+			location /dataViz/Treemap/HeatMap {
+				index re.html;
+			}
+		}
 	}
 
 	location *.php {
@@ -29,17 +33,28 @@ server
 		cgi_pass /usr/bin/python3;
 	}
 
+	location *.pl {
+		cgi_pass /usr/bin/perl;
+	}
+
+	location *.rb {
+		cgi_pass /usr/bin/ruby;
+	}
+
 	location /uploads {
 		autoindex on;
 	}
 
+	location /cgi-bin {
+		index index.php;
+	}
 }
 
 server {
 
 	listen 8080;
 	server_name bsuc.42.fr;
-	root ./www;
+	root ./blbl;
 
 	index index.html;
 
