--- a/conf/test.conf
+++ b/conf/test.conf
@@ -54,4 +54,4 @@ servers
 		{"location", DirectiveType::LOCATION},
 		{"alias", DirectiveType::ALIAS},
 		{"cgi_pass", DirectiveType::CGI_PASS},
-		{"client_body_buffer_size", DirectiveType::CLIENT_BODY_BUFFER_SIZE}
+		{"client_body_limit_size", DirectiveType::client_body_limit_size}
