--- a/conf/default.conf
+++ b/conf/default.conf
@@ -4,7 +4,7 @@ server
 	server_name lala.42.fr;
 
 	root /home/barb/cursus/newWebserv/www;
-	client_body_buffer_size 1M;
+	client_body_limit_size 1M;
 	default_error_page /error.html;
 
 	location / {
