--- a/conf/linux.conf
+++ b/conf/linux.conf
@@ -17,7 +17,7 @@ server
 
 	location /post_body {
 		allow_methods POST
-		client_body_buffer_size 100
+		client_body_limit_size 100
 	}
 
 	location /directory {
@@ -55,7 +55,7 @@ server{
 
 	location /post_body {
 		allow_methods POST
-		client_body_buffer_size 100
+		client_body_limit_size 100
 	}
 
 	location /directory {
@@ -94,7 +94,7 @@ server
 
 	location /post_body {
 		allow_methods POST
-		client_body_buffer_size 100
+		client_body_limit_size 100
 	}
 
 	location /directory {
