[todo logs; checks errors']

--- a/conf/default.conf
+++ b/conf/default.conf
@@ -4,8 +4,8 @@ server
 	server_name lala.42.fr;
 
 	root /home/barb/cursus/newWebserv/www;
-	client_body_limit_size 1M;
-	default_error_page /error.html;
+	client_body_limit_size 10k;
+	default_error_page 404 413 400 /error.html;
 
 	location / {
 		index index.html;
